config.json: updated showIcon in primaryLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -13,7 +13,7 @@
                 "label": "Info",
                 "url": "/info",
                 "icon": "",
-                "showIcon": true
+                "showIcon": false
             },
             {
                 "type": "Link",
