--- a/content/data/config.json
+++ b/content/data/config.json
@@ -81,7 +81,7 @@
             "title": "Contact details",
             "phoneNumber": "508-818-1727",
             "phoneAltText": "My phone number",
-            "email": "thisismyemail.@myemail.me",
+            "email": "jonathen@joncolon.dev",
             "emailAltText": "My email",
             "address": "312 Lovely Street, Brooklyn, NY, 123456",
             "addressAltText": "My address"
