--- a/content/data/config.json
+++ b/content/data/config.json
@@ -83,7 +83,7 @@
             "phoneAltText": "My phone number",
             "email": "jonathen@joncolon.dev",
             "emailAltText": "My email",
-            "address": "312 Lovely Street, Brooklyn, NY, 123456",
+            "address": "Southern Mass",
             "addressAltText": "My address"
         },
         "copyrightText": "Powered by [Netlify](https://www.netlify.com/)",
