--- a/content/data/config.json
+++ b/content/data/config.json
@@ -73,7 +73,7 @@
                 "type": "Link",
                 "label": "GitHub",
                 "url": "https://github.com/netlify-templates",
-                "altText": "Netlify templates"
+                "altText": "Jon Colon Github"
             }
         ],
         "contacts": {
