--- a/content/data/config.json
+++ b/content/data/config.json
@@ -31,7 +31,7 @@
                 "type": "Social",
                 "altText": "Twitter",
                 "label": "Twitter",
-                "url": "https://twitter.com/netlify",
+                "url": "https://x.com/JonathenColon",
                 "icon": "twitter"
             },
             {
